# oj

./: README.md
JudgeCore/: CMakeLists.txt  JudgeCore.cpp  JudgeCore.h  jni_lib.hpp
JudgeCore/child/: child.cpp
JudgeCore/common/: common.cpp  common.h
JudgeCore/judge/: judge.cpp  judge.h
JudgeCore/system/: system.cpp  system.h
JudgeCore/utils/: jni_lib.cpp  jni_lib.h
assets/: 实体状态.eddx  数据传递.eddx
react/nucoj/: README.md  package-lock.json  package.json  tsconfig.json
react/nucoj/public/: index.html
react/nucoj/src/: App.scss  App.tsx  index.tsx  setupProxy.js
react/nucoj/src/action/controller/: index.tsx
react/nucoj/src/action/problem/: index.tsx
react/nucoj/src/action/user/: index.tsx
react/nucoj/src/assets/icon/: BackIcon.tsx  BackTopIcon.tsx  ChampionIcon.tsx  CodeIcon.tsx  ContestIcon.tsx  (+25 more)
react/nucoj/src/reducer/: ControllerReducer.tsx  UserReducer.tsx  index.tsx
react/nucoj/src/router/: Loading.tsx  RouterView.tsx
react/nucoj/src/store/: index.tsx
react/nucoj/src/util/: Tocify.tsx  index.tsx  useInterval.tsx
react/nucoj_admin/: README.md  image.d.ts  package-lock.json  package.json
react/nucoj_admin/public/: index.html
react/nucoj_admin/src/: App.scss  App.tsx  index.tsx
react/nucoj_admin/src/reducer/: UserReducer.tsx  index.tsx
react/nucoj_admin/src/router/: Loading.tsx  RouterView.tsx
react/nucoj_admin/src/store/: index.tsx
react/nucoj_admin/src/util/: index.tsx
server/: README.md  pom.xml
server/src/main/resources/: application-dev.yaml  application-prod.yml  application.yaml  application.yml
wiki/: slef.md
(+367 files in other folders)
